...
                          : const Placeholder(),
                    ),
                  ),
                  Container(
                    margin: const EdgeInsets.all(8.0),
                    child: TextField(
                      key: const ValueKey<String>('ReportDetailsTextFieldKey'),
                      maxLength: Settings.noteMaxLength,
                      maxLines: Settings.noteMaxLines,
                      decoration: InputDecoration(
                        hintText: AppLocalizations.of(context)
                                ?.noteTextField_HintText ??
                            'Comment to photo',
...
                          width: screenSize.width / 3,
                          child: ElevatedButton(
                            onPressed: () =>
                                bloc.add(CancelReportButtonPressed()),
                            child: Text(
                              AppLocalizations.of(context)?.btnCancel_Label ??
                                  'Cancel',
                              style: Theme.of(context).textTheme.labelLarge,
                            ),
                          ),
                        ),
                        SizedBox(
                          width: screenSize.width / 3,
...
